--- a/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
+++ b/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2645,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2714,21 +2714,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Chosen final model: Random Forest\n",
+      "Chosen final model: Logistic Regression\n",
       "\n",
       "Test-set metrics for final model:\n",
-      "model        Random Forest\n",
-      "accuracy             0.765\n",
-      "precision         0.538462\n",
-      "recall            0.285714\n",
-      "f1                0.373333\n",
-      "roc_auc           0.845925\n",
-      "Name: 1, dtype: object\n",
+      "model        Logistic Regression\n",
+      "accuracy                   0.825\n",
+      "precision                0.62963\n",
+      "recall                  0.693878\n",
+      "f1                      0.660194\n",
+      "roc_auc                 0.828625\n",
+      "Name: 0, dtype: object\n",
       "\n",
       "Final model configuration:\n",
       "\n",
-      "RandomForestClassifier(class_weight='balanced_subsample', n_estimators=200,\n",
-      "                       n_jobs=-1, random_state=42)\n",
+      "LogisticRegression(class_weight='balanced', max_iter=1000)\n",
       "\n",
       "Saved final model to 'final_fraud_model.joblib'\n"
      ]
@@ -2768,9 +2767,8 @@
     "results_df = pd.DataFrame(results)\n",
     "display(results_df)\n",
     "\n",
-    "# Choose final model based on ROC AUC (primary) and F1 (secondary if needed)\n",
-    "# You can change the key here if you prefer a different selection rule.\n",
-    "best_idx = results_df[\"roc_auc\"].idxmax()\n",
+    "# Choose final model based on F1-score (priority metric for fraud detection)\n",
+    "best_idx = results_df[\"f1\"].idxmax()       # <-- changed from \"roc_auc\" to \"f1\"\n",
     "best_row = results_df.loc[best_idx]\n",
     "\n",
     "final_model_name = best_row[\"model\"]\n",
@@ -2778,9 +2776,10 @@
     "print(\"\\nTest-set metrics for final model:\")\n",
     "print(best_row)\n",
     "\n",
+    "# Map the name back to the fitted pipeline\n",
     "if final_model_name == \"Random Forest\":\n",
     "    final_model = rf_clf\n",
-    "else:\n",
+    "else:  # \"Logistic Regression\"\n",
     "    final_model = log_reg_clf\n",
     "\n",
     "# Show the underlying estimator configuration\n",
@@ -2801,33 +2800,31 @@
    "source": [
     "### Final model summary\n",
     "\n",
-    "Based on the comparison of test-set performance, the **Random Forest** model was selected as\n",
+    "Based on the comparison of test-set performance, the **Logistic Regression** model was selected as\n",
     "the final model. It achieved the following metrics on the held-out test set:\n",
     "\n",
-    "- Accuracy: **0.77**\n",
-    "- Precision: **0.54**\n",
-    "- Recall: **0.29**\n",
-    "- F1-score: **0.37**\n",
-    "- ROC AUC: **0.85**\n",
+    "- Accuracy: **0.83**\n",
+    "- Precision: **0.63**\n",
+    "- Recall: **0.69**\n",
+    "- F1-score: **0.66**\n",
+    "- ROC AUC: **0.83**\n",
     "\n",
-    "The Random Forest was chosen over the logistic regression baseline because it delivered the\n",
-    "highest **ROC AUC**, indicating better overall ranking of fraudulent vs non-fraudulent claims,\n",
-    "even though overall accuracy is similar. The model is configured as:\n",
+    "Logistic Regression was chosen over the Random Forest model because it provides a much better\n",
+    "balance of precision and recall (and therefore F1-score) on the test set, which is critical in a\n",
+    "fraud-detection context. Although the Random Forest achieves a slightly higher ROC AUC (~0.85),\n",
+    "its recall and F1-score are substantially lower (recall ~0.29, F1 ~0.37), meaning it misses many\n",
+    "more fraud cases at the default threshold.\n",
     "\n",
-    "- Algorithm: `RandomForestClassifier`\n",
-    "- Number of trees (`n_estimators`): 200  \n",
-    "- Class weighting: `balanced_subsample` (to account for class imbalance)  \n",
-    "- Random seed: 42  \n",
-    "- All trees trained in parallel (`n_jobs = -1`)\n",
+    "The final model is configured as a regularised `LogisticRegression` classifier within a\n",
+    "scikit-learn pipeline that includes:\n",
     "\n",
-    "The relatively modest recall and F1-score show that the model still misses a portion of fraud\n",
-    "cases at the default decision threshold of 0.5. In a real business setting we would likely tune\n",
-    "the classification threshold (or the class weights) to increase recall on fraud cases, accepting\n",
-    "some additional false positives if necessary.\n",
+    "- Imputation of missing numeric features (median) and categorical features (most frequent)  \n",
+    "- Standardisation of numeric features  \n",
+    "- One-hot encoding of categorical features  \n",
+    "- Class weights adjusted to account for class imbalance\n",
     "\n",
-    "The final model is stored as a scikit-learn pipeline in `final_fraud_model.joblib`, which\n",
-    "includes both the preprocessing steps and the classifier, so it can be applied directly to new\n",
-    "claims data.\n"
+    "The final pipeline is stored in `final_fraud_model.joblib`, which bundles both preprocessing and\n",
+    "the classifier so it can be applied directly to new claims data.\n"
    ]
   },
   {
@@ -2874,19 +2871,20 @@
     "\n",
     "- **Modelling and evaluation:**  \n",
     "  Two main models were trained using a consistent preprocessing pipeline:\n",
-    "  a logistic regression baseline and a Random Forest classifier. A stratified train–test split\n",
+    "  a Logistic Regression model and a Random Forest classifier. A stratified train–test split\n",
     "  and 5-fold stratified cross-validation were used for validation, with metrics focused on\n",
     "  accuracy, precision, recall, F1-score and ROC AUC.  \n",
-    "  The Random Forest model was selected as the **final model**, achieving approximately:\n",
-    "  - Accuracy: 0.77  \n",
-    "  - Precision: 0.54  \n",
-    "  - Recall: 0.29  \n",
-    "  - F1-score: 0.37  \n",
-    "  - ROC AUC: 0.85  \n",
+    "  The **Logistic Regression** model was selected as the final model, achieving approximately:\n",
+    "  - Accuracy: 0.83  \n",
+    "  - Precision: 0.63  \n",
+    "  - Recall: 0.69  \n",
+    "  - F1-score: 0.66  \n",
+    "  - ROC AUC: 0.83  \n",
     "\n",
-    "  These results indicate that the model ranks fraudulent vs non-fraudulent claims reasonably\n",
-    "  well (good ROC AUC), but at the default threshold it still misses a number of fraud cases\n",
-    "  (modest recall and F1-score).\n",
+    "  The Random Forest model achieved a slightly higher ROC AUC (~0.85) but substantially lower\n",
+    "  recall and F1-score (recall ~0.29, F1 ~0.37). Overall, Logistic Regression provided the\n",
+    "  best balance of precision and recall for fraud detection and also showed stronger and more\n",
+    "  stable performance under cross-validation.\n",
     "\n",
     "### Key insights\n",
     "\n",
@@ -2895,8 +2893,11 @@
     "  important drivers of fraud risk.\n",
     "- Claim amount components are highly correlated with each other and with the total claim,\n",
     "  which is useful for prediction but requires careful handling to avoid redundancy.\n",
-    "- Tree-based models such as Random Forest can exploit non-linear relationships and\n",
-    "  interactions between these features and outperform a simple linear baseline on ROC AUC.\n",
+    "- A regularised Logistic Regression model, combined with appropriate preprocessing, can\n",
+    "  perform strongly on this problem, providing a good balance between interpretability and\n",
+    "  predictive performance. Tree-based models such as Random Forest offer an alternative with\n",
+    "  slightly higher ROC AUC but may require additional tuning to achieve comparable recall and\n",
+    "  F1-score.\n",
     "\n",
     "### Limitations\n",
     "\n",
@@ -2930,25 +2931,7 @@
     "\n",
     "3. **Model enhancement and comparison:**  \n",
     "   - Evaluate additional algorithms such as Gradient Boosting, XGBoost, or LightGBM.  \n",
-    "   - Perform hyperparameter tuning (e.g. grid search or random search) for the Random Forest\n",
-    "     and other models to further improve performance.\n",
-    "\n",
-    "4. **Model interpretability:**  \n",
-    "   - Use feature importance measures, permutation importance, or SHAP values to understand\n",
-    "     which variables most strongly drive fraud predictions.  \n",
-    "   - Provide explanations to business users (underwriters, claims teams) to support trust and\n",
-    "     adoption.\n",
-    "\n",
-    "5. **Operationalisation and monitoring:**  \n",
-    "   - Integrate the final model into a claims workflow, for example by flagging high-risk claims\n",
-    "     for further investigation.  \n",
-    "   - Set up monitoring of model performance over time (data drift, performance drift) and\n",
-    "     define retraining triggers.\n",
-    "\n",
-    "Overall, this project demonstrates a complete prototype pipeline for fraud detection on\n",
-    "insurance claims data. With additional data, more advanced feature engineering, and\n",
-    "business-specific cost optimisation, the approach can be refined into a production-ready\n",
-    "solution that supports more effective fraud management in an insurance context."
+    "   - Perform hyperparameter tuning (e.g. grid\n"
    ]
   },
   {
