--- a/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
+++ b/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
@@ -2969,7 +2969,7 @@
     "\n",
     "**Industry / background context**\n",
     "\n",
-    "9. Odunayo, M., & Msomi, T. (2021). *The insurance industry in Africa represents less than one percent of insured catastrophe losses worldwide, despite being home to around 17% of the global population.* Journal of Financial Risk Management.  \n",
+    "9.  Msomi, T., & Odunayo, O. (2021). Determinants of Insurance Penetration in West African Countries: A Panel Auto Regressive Distributed Lag Approach. Journal of Risk and Financial Management, 14(8), 350.  \n",
     "10. Munich Re (2024). *The price of natural catastrophes in Africa: insights into the most affected regions.*  \n",
     "\n",
     "**Python libraries and documentation**\n",
