--- a/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
+++ b/QCTO---Workplace-Module-Notebook-Template-4571.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "The main goals of the project are:\n",
     "\n",
-    "To apply the data science life cycle — from collection and cleaning to analysis and communication of findings.\n",
+    "To apply the data science life cycle from collection and cleaning to analysis and communication of findings.\n",
     "\n",
     "To explore the insurance claims dataset to uncover insights about policyholders, claims behavior, and potential fraud.\n",
     "\n",
@@ -406,12 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# =======================================\n",
     "# Basic cleaning specific to this dataset\n",
-    "# -------------------------\n",
+    "# =======================================\n",
     "\n",
     "# Check for missing values\n",
     "df.isnull().sum()\n",
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
